<resources>
    <string name="app_name">Water</string>

    <!-- Bottom Navigation -->
    <string name="bottomnavigation_item_settings">Settings</string>
    <string name="bottomnavigation_item_statistics">Statistics</string>
    <string name="bottomnavigation_item_main">Main</string>
    <string name="bottomnavigation_item_smth">Something</string>
    <string name="bottomnavigation_item_reminders">Reminders</string>

    <!-- Preferences -->
    <string name="preferences_category_first">First</string>
    <string name="preferences_category_second">Second</string>
    <string name="preferences_category_application">Application settings</string>
    <string name="preferences_category_schedule">Schedule</string>

    <!-- Titles -->
    <string name="preferences_title_weight">Weight</string>
    <string name="preferences_title_gender">Gender</string>
    <string name="preferences_title_volume">Volume Unit</string>
    <string name="preferences_title_time">Time</string>

    <!-- Units -->
    <string name="preferences_gender_male">Male</string>
    <string name="preferences_gender_female">Female</string>
    <string name="preferences_volume_ml">Ml</string>
    <string name="preferences_volume_oz">Oz</string>
    <string name="preferences_weight_kg">Kg</string>
    <string name="preferences_weight_lb">Lb</string>
    <string name="preferences_time_12">12-hour</string>
    <string name="preferences_time_24">24-hour</string>
    <string name="preferences_title_bedtime">Bedtime</string>
    <string name="preferences_title_wake">Wake</string>

    <!-- Preference keys for XML files
    ! Do not change ! -->
    <string name="preferences_key_weight">key_weight</string>
    <string name="preferences_key_volume">key_volume</string>
    <string name="preferences_key_gender_v4">key_gender</string>
    <string name="preferences_key_time">key_time</string>

    <!-- Do not need -->
    <string name="preferences.key.gender">key.gender</string>
    <string name="preferences.key.gender_v2">key.gender.v2</string>
    <string name="preferences.key.gender_v3">key_gender_v3</string>

    <!-- End of Preferences -->

    <!-- Notification -->
    <string name="notification_ticker">Notification ticker</string>
    <string name="notification_title">Notification title</string>
    <string name="notification_text">Notification text</string>

    <!-- Errors -->
    <string name="error_settings_empty_weight">Weight parameter is 0</string>

    <!-- Dialog -->
    <string name="dialog_button_positive">OK</string>


    <!-- Dialog messages -->
    <string name="dialog_message_empty_weight">Please, select your weight.</string>

</resources>
