<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <PreferenceCategory
        android:title="@string/preferences_category_first"
        android:selectable="true">


        <ListPreference
            android:title="Food Ration"
            android:summary="What you mostly eat during the day?"
            android:key="listPref"
            android:entries="@array/preferences_array_foodRation"
            android:entryValues="@array/preferences_array_foodRationValues"
            />

        <com.home.bel.water.utils.UnitTwoBtnPreference
            android:key="@string/preferences_key_volume"
            android:defaultValue="@string/preferences_volume_ml"
            />


    </PreferenceCategory>

    <PreferenceCategory
        android:title="Your Schedule"
        android:key="key_screen_schedule"
        android:summary="Settings for schedule"
        >

        <com.home.bel.water.utils.TimePreferences.TimeTwoBtnPreference
            android:key="key_time"
            />

        <com.home.bel.water.utils.TimePreferences.WakeTimeCustomDialogPreference
            android:key="key_wake"
            />

        <com.home.bel.water.utils.TimePreferences.BedTimeCustomDialogPreference
            android:key="key_bedtime"/>

    </PreferenceCategory>




    <PreferenceCategory
        android:title="@string/preferences_category_second"
        android:summary="User data">

            <com.home.bel.water.utils.WeightDialogPreference
                android:key="key_weight"
                />

            <!--<com.home.bel.water.utils.GenderPreference-->
                <!--android:key="@string/preferences.key.gender"-->
                <!--/>-->

            <!--<com.home.bel.water.utils.GenderPreferenceB-->
                <!--android:key="@string/preferences.key.gender_v2"-->
                <!--/>-->

            <!--<com.home.bel.water.utils.GenderPreferenceD-->
                <!--android:key="@string/preferences.key.gender_v3"-->
                <!--/>-->

            <com.home.bel.water.utils.GenderTwoBtnPreference
                android:key="@string/preferences_key_gender_v4"
                />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preferences_category_application">

        <SwitchPreferenceCompat
            android:id="@+id/preferences_switch_notifications"
            android:key="key_notification"
            android:summary="On/Off"
            android:title="Notifications"
            android:text="Notifications"
            android:defaultValue="true"
            />

    </PreferenceCategory>


    <!-- !!! Do not take away !!!

    This preference will take place that is cut off by Bottom Navigation Menu

    -->
    <Preference/>

</PreferenceScreen>