<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/tv_weight_title"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/preferences_title_weight"
        style="@style/Water.Preference.Title"
        />

    <TextView
        android:id="@+id/tv_weight_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/b_weight_kg"
        android:layout_toStartOf="@+id/b_weight_kg"
        android:layout_toRightOf="@+id/tv_weight_title"
        android:layout_toEndOf="@+id/tv_weight_title"
        style="@style/Water.Preference.Value"
        android:text="500"
        />

    <Button
        android:id="@+id/b_weight_kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/b_weight_lb"
        android:layout_toStartOf="@+id/b_weight_lb"
        android:background="@drawable/selector_preference_btn"
        android:text="@string/preferences_weight_kg"
        style="@style/Water.Preference.LeftButton"
        />

    <Button
        android:id="@+id/b_weight_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_preference_btn"
        android:text="@string/preferences_weight_lb"
        style="@style/Water.Preference.RightButton"
        />

</RelativeLayout>